# Ingenieria_Web_Grupo2

./: Dockerfile  build.sh  create_superuser.py  db.sqlite3  init_social_auth.py  main.py  manage.py  pyproject.toml  requirements.txt  run.sh
PartyFinder/: asgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  forms.py  models.py  search_indexes.py  views.py
events/migrations/: 0001_initial.py  0002_initial.py  0003_event_available_tickets_event_max_tickets_per_user.py  0004_alter_event_available_tickets.py
home/: views.py
home/templates/: base.html  dashboard.html  home.html
mainapp/: admin.py  views.py
mainapp/migrations/: 0001_initial.py  0002_event_remove_partyimage_party_eventimage_and_more.py  0003_eventvideo.py
mainapp/models/: __init__.py  customuserform.py  event.py  party.py
mainapp/templates/: base.html  dashboard.html  event_detail.html  events.html  home.html  navbar.html
media/event_images/: 2
static/events/css/: base.css  (+10 more)
templates/: robots.txt
templates/events/: about.html  base.html  create_event.html  create_event_media.html  create_event_sectors.html  dashboard.html  event_detail.html  events.html  home.html  manage_tickets.html  my_tickets.html  purchase_success.html  update_tickets.html
templates/users/: base-user-form.html  email_confirmation.html  login.html  signup.html
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customusermodel_birth_date.py
whoosh_index/: MAIN_3mjw5wg6xpqpgjut.seg  MAIN_40koyqtzrap1dpt2.seg  MAIN_jf5r1lgdx8bwmp9t.seg  MAIN_obxnxbjp0bffwlv2.seg  _MAIN_1.toc
(+24 files in other folders)
